--- a/dapp/frontend/package.json
+++ b/dapp/frontend/package.json
@@ -34,6 +34,7 @@
     "eslint-config-next": "^13.4.19",
     "ethers": "^6.8.1",
     "lucide-react": "^0.241.0",
+    "moralis": "^2.26.4",
     "next": "^13.4.19",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
